Bitwarden/Manifests/statefulset.yml
---
apiVersion: "apps/v1"
kind: StatefulSet
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      serviceAccountName: bitwarden
      securityContext:
        fsGroup: 33
        runAsUser: 33
      containers:
      - image: bitwardenrs/server:latest
        imagePullPolicy: IfNotPresent
        name: bitwarden
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 3012
          name: websocket
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: bitwarden-pvc
        resources:
          limits:
            cpu: 300m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 256Mi
      volumes:
      - name: bitwarden-pvc
        persistentVolumeClaim:
          claimName: bitwarden-bitwarden-0
#  volumeClaimTemplates:
#  - metadata:
#      name: data
#    spec:
#      accessModes:
#        - "ReadWriteMany"
#      resources:
#        requests:
#          storage: "14Gi"
#      storageClassName: default
