Bitwarden/Manifests/bitwarden_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $req_id";
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "25"
    nginx.ingress.kubernetes.io/limit-rps: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: bitwarden
  name: bitwarden
  namespace: bitwarden
spec:
  rules:
  - host: bw.r3d3mpt10n.com
    http:
      paths:
      - backend:
          serviceName: bitwarden
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          serviceName: bitwarden
          servicePort: 3012
        path: /notifications/hub
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bw.r3d3mpt10n.com
    secretName: bitwarden-tls
